# claude-wt

./: .codecov.yml  README.md  justfile  pyproject.toml  shell-integration.sh
.github/workflows/: ci.yml  release.yml
claude_wt/: cli.py  core.py  github.py  identifier.py  linear.py  repository.py  session.py  tmux.py  tmux_launcher.py  worktree.py
completions/: README.md
docs/adrs/: ARCHITECTURE_IMPROVEMENT_PLAN.md  DEPENDENCY_INJECTION_RESEARCH.md
shell/: README.md  git-aliases.sh  starship-worktree.toml  worktree-prompt.sh
tests/: __init__.py  test_cli_commands.py  test_file_operations.py  test_git_operations.py  test_linear_integration.py  test_materialize.py  test_path_operations.py  test_pr_support.py  test_tmux_integration.py  test_unified_work_command.py
