[project]
name = "claude-wt"
dynamic = ["version"]
description = "Utility for running Claude Code in parallel and managing dedicated git worktrees."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cyclopts>=3.0.0", "rich>=13.0.0"]
keywords = ["claude", "git", "ai"]
authors = [{ name = "Jeremiah Lowin" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.scripts]
claude-wt = "claude_wt.cli:app"

[project.urls]
Homepage = "https://github.com/jlowin/claude-wt"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pyright>=1.1.402"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "coverage[toml]>=7.6.0",
]


[tool.pyright]
include = ["claude_wt"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", ".git", "dist"]
pythonVersion = "3.10"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "RUF013"]
# allow imports not at the top of the file
"src/fastmcp/__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["claude_wt"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2
